# kabu

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile  Dockerfile.test  docker-compose.yml  main.py  pyproject.toml
scripts/: run-demo.sh  run-tests.sh
src/: main.py  random_walk.py  test_random_walk.py  test_trend_indicators.py  trend_indicators.py  visualizer.py
test-results/: test-results.xml
